# picross-solver

./: .travis.yml  LICENSE  README.md  picross_solver.py  setup.cfg  test_solver.py  travis.yml
picross_solver/: picross_solver.py
src/picross_solver/: picross_solver.py
tests/: test_solver.py
