[metadata]
name = picross-solver
version = 1.1.1
author = Alexander Coats
author_email = swifteralexc@gmail.com
description = A picross/nonogram solver.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swifteralex/picross-solver
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
keywords='picross solver nonogram puzzle',
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src
